tests/baselines/reference/unusedClassesinModule1.errors.txt
unusedClassesinModule1.ts(2,11): error TS6196: 'Calculator' is declared but never used.


==== unusedClassesinModule1.ts (1 errors) ====
    namespace A {
        class Calculator {
              ~~~~~~~~~~
!!! error TS6196: 'Calculator' is declared but never used.
            public handelChar() {
            }
        }
    }